<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/show_examples"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_examples"
        app:layout_constraintStart_toStartOf="@+id/sb_examples"
        app:layout_constraintTop_toBottomOf="@+id/sb_examples" />

    <TextView
        android:id="@+id/show_feedback"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_feedback"
        app:layout_constraintStart_toStartOf="@+id/sb_feedback"
        app:layout_constraintTop_toBottomOf="@+id/sb_feedback" />

    <TextView
        android:id="@+id/txt_relevance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subrelevans"
        app:layout_constraintEnd_toEndOf="@+id/sb_relevance"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="@+id/sb_relevance"
        app:layout_constraintTop_toBottomOf="@+id/subjectTitle" />

    <TextView
        android:id="@+id/txt_performance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/overallperformance"
        app:layout_constraintEnd_toEndOf="@+id/sb_performance"
        app:layout_constraintStart_toStartOf="@+id/sb_performance"
        app:layout_constraintTop_toBottomOf="@+id/show_subrel" />

    <TextView
        android:id="@+id/txt_prep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/teacherprep"
        app:layout_constraintEnd_toEndOf="@+id/sb_prep"
        app:layout_constraintStart_toStartOf="@+id/sb_prep"
        app:layout_constraintTop_toBottomOf="@+id/show_perf" />

    <TextView
        android:id="@+id/txt_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/amountfeedback"
        app:layout_constraintEnd_toEndOf="@+id/sb_feedback"
        app:layout_constraintStart_toStartOf="@+id/sb_feedback"
        app:layout_constraintTop_toBottomOf="@+id/show_prep" />

    <TextView
        android:id="@+id/txt_examples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/teacherexamples"
        app:layout_constraintEnd_toEndOf="@+id/sb_examples"
        app:layout_constraintStart_toStartOf="@+id/sb_examples"
        app:layout_constraintTop_toBottomOf="@+id/show_feedback" />

    <TextView
        android:id="@+id/txt_jobopportunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/jobopportunity"
        app:layout_constraintEnd_toEndOf="@+id/sb_jobopp"
        app:layout_constraintStart_toStartOf="@+id/sb_jobopp"
        app:layout_constraintTop_toBottomOf="@+id/show_examples" />

    <SeekBar
        android:id="@+id/sb_relevance"
        android:layout_width="250dp"
        android:layout_height="14dp"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_relevance" />

    <SeekBar
        android:id="@+id/sb_performance"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_performance" />

    <SeekBar
        android:id="@+id/sb_prep"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_prep" />

    <SeekBar
        android:id="@+id/sb_feedback"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_feedback" />

    <SeekBar
        android:id="@+id/sb_examples"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_examples" />

    <SeekBar
        android:id="@+id/sb_jobopp"
        android:layout_width="250dp"
        android:layout_height="18dp"
        android:layout_marginTop="18dp"
        android:max="100"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_jobopportunity" />

    <TextView
        android:id="@+id/show_subrel"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_relevance"
        app:layout_constraintStart_toStartOf="@+id/sb_relevance"
        app:layout_constraintTop_toBottomOf="@+id/sb_relevance" />

    <TextView
        android:id="@+id/sb_value"
        android:layout_width="54dp"
        android:layout_height="22dp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="175dp" />

    <TextView
        android:id="@+id/show_jobop"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_jobopp"
        app:layout_constraintStart_toStartOf="@+id/sb_jobopp"
        app:layout_constraintTop_toBottomOf="@+id/sb_jobopp" />

    <TextView
        android:id="@+id/show_prep"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_prep"
        app:layout_constraintStart_toStartOf="@+id/sb_prep"
        app:layout_constraintTop_toBottomOf="@+id/sb_prep" />

    <TextView
        android:id="@+id/show_perf"
        android:layout_width="54dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/sb_performance"
        app:layout_constraintStart_toStartOf="@+id/sb_performance"
        app:layout_constraintTop_toBottomOf="@+id/sb_performance" />

    <TextView
        android:id="@+id/subjectTitle"
        android:layout_width="150dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_createRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="24dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_jobop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e"
        tools:layout_editor_absoluteX="1061dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>